New in v1.0.5 (????/??/??)
--------------------------

Fix a traceback due to an off-by-1 error in "--remove-older-than nB".

Fix a security violation when restoring from a remote repository.
(Patch from Charles Duffy.)

--list-at-time, --list-increments, and --list-increment-sizes should
now work from a read-only repository.  (Bug reported by Wolfgang
Dautermann.)


New in v1.0.4 (2006/01/15)
--------------------------

Files with ACLs will not be unnecessarily marked as changed (bug
report by Carsten Lorenz).

Another fix for long-filenames crash, this time when a long-named
directory with files in it gets deleted

Selection fix: empty directories could sometimes be improperly
excluded if certain include expressions involving a non-trailing '**'
were used.  Bug reported by Toni Price.

Bug #15436 reported by Remy Blank: rdiff-backup would sometimes crash
on ACLs if the owning uname did not exist on destination.


New in v1.0.3 (2005/11/25)
--------------------------

Applied Alec Berryman's patch to update the no-compression regexp.

Alec Berryman's fs_abilities patch is supposed to help with AFS.

Fixed (version of) filename-too-long crash when quoting.

Due to very detailed error report from Yoav, fixed a "Directory not
empty" error that can arise on emulated filesystems like NFS and
EncFS.

Cleaned up remove older than report, and also stopped it from deleting
current data files if you specify a time later than the current
mirror.

--compare fix, now you don't need to specify the exact time of a
session to avoid a "no metadata" error.


New in v1.0.2 (2005/10/24)
--------------------------

Fix for spurious security violation from --create-full-path (reported
by Mike Bydalek).

Fix for bug 14545 which was introduced in version 1.0.1:  Quoting
caused a spurious security violation.  (Important for Mac OS X)

An error reading carbonfile data on Mac OS X should no longer cause a
crash.  (Thanks to Kevin Horton for testing.)
